--- a/teaching/f2020_dg2.html
+++ b/teaching/f2020_dg2.html
@@ -41,8 +41,8 @@
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 
 -->
-
-
+2020-09-07: Due to a technical glitch on my recording device, the second video for Session 4 does not have any voice. I shall fix this problem by tomorrow September 8th 15:00 and your attendance due for this week will be extended for 24 hours.  <br>
+2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 2020-09-01: Welcome!<br>
 
 
@@ -89,7 +89,7 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 <h2><p>Exam Schedules</p></h2>
 TBA <br><br>
 
-<!-- 
+<!--
 Midterm Exam: <FONT COLOR="#C40062">22 October (Tuesday),</FONT> In-class.<br>
 - Coverage: Chapters 8 and 9. Subsections on Rodrigues' formula, Asymptotic lines are not included.<br>
 - Total 8 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), 6 questions which are identical or related to homework problems, and 1 question from the old national exam problems (See the attached PDF for Homework #4.<br>
@@ -106,7 +106,7 @@ Final Exam: <FONT COLOR="#C40062">16 December (Monday),</FONT> at E1-2 Room 306,
 
 <h2><p>Make-up announcement</p></h2>
 TBA<br><br>
-<!-- 
+<!--
 Due to the teaching observation practice of most of students, we do not meet during the period 28 October -- 08 November. Instead, we shall have six one-hour long make-up classes. Location is TBA.<br>
 
 Monday, 14 October 14:00--14:50<br>
