--- a/teaching/f2020_ge.html
+++ b/teaching/f2020_ge.html
@@ -39,7 +39,7 @@
 
 
 -->
-
+2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 2020-09-01: Welcome!<br>
 
 
