--- a/teaching/f2020_geom2.html
+++ b/teaching/f2020_geom2.html
@@ -42,7 +42,7 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
-
+2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 2020-09-01: Welcome!<br>
 
 
@@ -105,7 +105,7 @@ Exercise 5.4. in p.146 #1, 4<br><br>
 TBA <br><br>
 
 
-<!-- 
+<!--
 
 Midterm Exam: <FONT COLOR="#C40062">28 October (Monday),</FONT> In-class.<br>
 
