--- a/teaching/f2020_geom2.html
+++ b/teaching/f2020_geom2.html
@@ -42,13 +42,19 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-09-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 2020-09-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
-
-TBA <br><br>
+Problems are taken from end-of-section exercises.<br><br>
+<b>Homework  #1</b> 13 problems. Due Date: September 22nd.<br>
+Exercise 1.2. in p.13 #3, 8, 13<br>
+Exercise 1.3. in p.15 #3, 7, 8<br>
+Exercise 1.5. in p.22 #1, 3<br>
+Exercise 1.7. in p.30 #2, 5, 8<br><br>
+<br><br>
 
 <!--
 Problems are taken from end-of-section exercises.<br><br>
