--- a/teaching/f2020_dg2.html
+++ b/teaching/f2020_dg2.html
@@ -41,17 +41,19 @@
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 
 -->
+2020-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 2020-09-07: Due to a technical glitch on my recording device, the second video for Session 4 does not have any voice. I shall fix this problem by tomorrow September 8th 15:00 and your attendance due for this week will be extended for 24 hours.  <br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 2020-09-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
-TBA<br><br>
-<!--
 Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
-<b>Homework  #1</b> 10 problems. Due Date: September 27th.<br>
-Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="f2019_dg2/hw1no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 28, 29, 32.<br><br>
+<b>Homework  #1</b> 10 problems. Due Date: September 28th.<br>
+Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="f2020_dg2/hw1no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 28, 29, 32.<br><br>
+
+
+<!--
 
 <b>Homework  #2</b> 10 problems. Due Date: October 7th.<br>
 Problems from Chapter 8 Part 2: #17, 19(a), 30, 33 <a href="f2019_dg2/hw2no33sol.pdf" title="Open Solution to Problem 8.33 (Korean edition)">(Solution)</a>, 34, 38.<br>
