--- a/teaching/f2020_geom2.html
+++ b/teaching/f2020_geom2.html
@@ -39,9 +39,10 @@
 2019-09-27: Check out <FONT COLOR="red">Homework #4</FONT> below.<br>
 2019-09-20: Check out <FONT COLOR="red">Homework #3</FONT> below.<br>
 2019-09-18: Announcement -- Student groups for group presentation. <a href="f2019_geom2/groups.pdf" title="Student groups">PDF</a> Be sure to check your email inbox.<br>
-2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
+
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-09-13: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2020-09-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 2020-09-01: Welcome!<br>
@@ -55,6 +56,12 @@ Exercise 1.3. in p.15 #3, 7, 8<br>
 Exercise 1.5. in p.22 #1, 3<br>
 Exercise 1.7. in p.30 #2, 5, 8<br><br>
 <br><br>
+
+<b>Homework  #2</b> 10 problems. Due Date: September 29th.<br>
+Exercise 2.1. in p.45 #1, 2a, 2c, 3<br>
+Exercise 2.2. in p.48 #4, 5c, 5d, 6<br>
+Exercise 2.3. in p.51 #1, 3<br><br>
+
 
 <!--
 Problems are taken from end-of-section exercises.<br><br>
