--- a/teaching/f2020_dg2.html
+++ b/teaching/f2020_dg2.html
@@ -41,7 +41,7 @@
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 
 -->
-2020-09-21: <FONT COLOR="red">Homework #2, #3</FONT> have been posted below.<br>
+2020-09-21: <FONT COLOR="red">Homework #2</FONT> have been posted below.<br>
 2020-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 2020-09-07: Due to a technical glitch on my recording device, the second video for Session 4 does not have any voice. I shall fix this problem by tomorrow September 8th 15:00 and your attendance due for this week will be extended for 24 hours.  <br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
