--- a/teaching/f2020_geom2.html
+++ b/teaching/f2020_geom2.html
@@ -62,6 +62,10 @@ Exercise 2.1. in p.45 #1, 2a, 2c, 3<br>
 Exercise 2.2. in p.48 #4, 5c, 5d, 6<br>
 Exercise 2.3. in p.51 #1, 3<br><br>
 
+<b>Homework  #3</b> 4 problems. Due Date: October 12th.<br>
+Exercise 2.4. in p.55 #1, 3<br>
+Exercise 2.5. in p.61 #1, 2<br><br>
+
 
 <!--
 Problems are taken from end-of-section exercises.<br><br>
