--- a/teaching/f2020_ge.html
+++ b/teaching/f2020_ge.html
@@ -39,6 +39,7 @@
 
 
 -->
+2020-09-28: Please read an email announcement concerning issues with the attendance collecting system of the CBNU eCampus. If you want to claim your attendance which was not collected through the system, please fill out <a href="https://forms.gle/BnbVH89edGYaFD5b6" title="Open Google Forms">this google form</a>.<br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 2020-09-01: Welcome!<br>
 
