--- a/teaching/f2020_geom2.html
+++ b/teaching/f2020_geom2.html
@@ -42,6 +42,9 @@
 
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+
+2020-09-28: Please read an email announcement concerning issues with the attendance collecting system of the CBNU eCampus. If you want to claim your attendance which was not collected through the system, please fill out <a href="https://forms.gle/BnbVH89edGYaFD5b6" title="Open Google Forms">this google form</a>.<br>
+2020-09-27: Check out <FONT COLOR="red">Homework #3</FONT> below.<br>
 2020-09-13: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2020-09-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
@@ -55,7 +58,6 @@ Exercise 1.2. in p.13 #3, 8, 13<br>
 Exercise 1.3. in p.15 #3, 7, 8<br>
 Exercise 1.5. in p.22 #1, 3<br>
 Exercise 1.7. in p.30 #2, 5, 8<br><br>
-<br><br>
 
 <b>Homework  #2</b> 10 problems. Due Date: September 29th.<br>
 Exercise 2.1. in p.45 #1, 2a, 2c, 3<br>
