--- a/teaching/f2020_dg2.html
+++ b/teaching/f2020_dg2.html
@@ -31,16 +31,18 @@
 2019-10-28: Your midterm papers are graded. You are welcome to visit my office to pick up your graded paper. Otherwise, it will be given out on our next class meeting. You will have to sign upon receipt.<br>
 2019-10-16: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> was made on 2019-10-14 in class. The same detail has been posted below.<br>
 2019-10-16: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
-2019-10-14: A solution to Problem 8.29 (8.33 in Korean edition) has been posted below.<br>
+
 2019-10-04: I have noticed discrepancies of problem numbering between English and Korean texts. Please solve problems as in English text.<br>
 2019-10-04: Please find <b>Make-up announcement</b> below.<br>
 2019-10-01: For those who could not make it to today's class to participate in the sports day of the College, a two-hour lecture on exactly the same material will be given on <b>Friday, October the 4th 10:00--12:00</b> at E1-2 Room 306.<br>
-2019-09-27: Just so you know -- When you work on your homework, there is no need to restate the statement of every homework problem.<br>
+
 2019-09-27: <FONT COLOR="red">Homework #2, #3</FONT> have been posted below.<br>
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 
 -->
+2020-09-29: A solution to Problem 8.29 has been posted below.<br>
+2020-09-29: Just so you know -- When you work on your homework, there is no need to restate the statement of every homework problem.<br>
 2020-09-28: Please read an email announcement concerning issues with the attendance collecting system of the CBNU eCampus. If you want to claim your attendance which was not collected through the system, please fill out <a href="https://forms.gle/BnbVH89edGYaFD5b6" title="Open Google Forms">this google form</a>.<br>
 2020-09-21: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2020-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
@@ -52,7 +54,7 @@
 <h2><p>Homework</p></h2>
 Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
 <b>Homework  #1</b> 10 problems. Due Date: September 28th.<br>
-Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="f2020_dg2/hw1no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 28, 29, 32.<br><br>
+Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="f2020_dg2/hw1no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 28, 29 <a href="f2020_dg2/hw1no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32.<br><br>
 
 <b>Homework  #2</b> 10 problems. Due Date: October 5th.<br>
 Problems from Chapter 8 Part 2: #17, 19(a), 30, 33, 34, 38.<br>
