--- a/teaching/f2020_dg2.html
+++ b/teaching/f2020_dg2.html
@@ -39,8 +39,9 @@
 2019-09-27: <FONT COLOR="red">Homework #2, #3</FONT> have been posted below.<br>
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
-
 -->
+
+2020-10-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-09-29: A solution to Problem 8.29 has been posted below.<br>
 2020-09-29: Just so you know -- When you work on your homework, there is no need to restate the statement of every homework problem.<br>
 2020-09-28: Please read an email announcement concerning issues with the attendance collecting system of the CBNU eCampus. If you want to claim your attendance which was not collected through the system, please fill out <a href="https://forms.gle/BnbVH89edGYaFD5b6" title="Open Google Forms">this google form</a>.<br>
@@ -61,21 +62,12 @@ Problems from Chapter 8 Part 2: #17, 19(a), 30, 33, 34, 38.<br>
 Problems from Chapter 9 Part 1: #1, 2, 4, 6<br>
 <br>
 
-
-<!--
-
-<b>Homework  #2</b> 10 problems. Due Date: October 7th.<br>
-Problems from Chapter 8 Part 2: #17, 19(a), 30, 33 <a href="f2019_dg2/hw2no33sol.pdf" title="Open Solution to Problem 8.33 (Korean edition)">(Solution)</a>, 34, 38.<br>
-Problems from Chapter 9 Part 1: #1, 2, 4, 6<br>
-<br>
-
-From Homework #3 and forthcoming homework assignments, all problem numbers are based on English text numbering. You can still use Korean-translated text, but do those problems in your Korean text corresponding to the English text's problems which are numbered as follows.<br><br>
-
-<b>Homework  #3</b> 12 problems. Due Date: October 14th.<br>
+<b>Homework  #3</b> 12 problems. Due Date: October 16th.<br>
 Problems from Chapter 9 Part 2: #33, 34, 35, 37, 38, 40.<br>
 Problems from Chapter 9 Part 3: #7, 9, 12, 41, 42, 43.<br>
-Here are problems from Chapter 9: <a href="f2019_dg2/ch9prob.pdf" title="Chapter 9 problems in English text">PDF</a><br>
 <br>
+
+<!--
 
 <b>Homework  #4</b> 11 problems. Due Date: October 22nd.<br>
 Problems from Chapter 9 Part 4: #10, 21, 22, 44, 48.<br>
