--- a/teaching/f2020_geom2.html
+++ b/teaching/f2020_geom2.html
@@ -42,7 +42,8 @@
 
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
-
+2020-10-03: Here is a very nice collection of math videos. <a href="http://www.dimensions-math.org/Dim_regarder_E.htm" title="Dimensions videos">Link</a> Please watch Chapter 1 and Chapter 9. You might want to watch other chapters as well as you learn more about geometry and topology.<br>
+2020-10-03: Check out <FONT COLOR="red">Homework #4</FONT> below.<br>
 2020-09-28: Please read an email announcement concerning issues with the attendance collecting system of the CBNU eCampus. If you want to claim your attendance which was not collected through the system, please fill out <a href="https://forms.gle/BnbVH89edGYaFD5b6" title="Open Google Forms">this google form</a>.<br>
 2020-09-27: Check out <FONT COLOR="red">Homework #3</FONT> below.<br>
 2020-09-13: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
@@ -67,6 +68,12 @@ Exercise 2.3. in p.51 #1, 3<br><br>
 <b>Homework  #3</b> 4 problems. Due Date: October 12th.<br>
 Exercise 2.4. in p.55 #1, 3<br>
 Exercise 2.5. in p.61 #1, 2<br><br>
+
+<b>Homework  #4</b> 7 problems. Due Date: October 8th.<br>
+Exercise 3.1. in p.68 #1, 2, 3<br>
+Exercise 3.2. in p.71 #2<br>
+Exercise 3.3. in p.73 #3<br>
+Exercise 3.4. in p.75 #1, 2<br><br>
 
 
 <!--
