--- a/teaching/f2020_dg2.html
+++ b/teaching/f2020_dg2.html
@@ -41,6 +41,7 @@
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
 
+2020-10-18: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2020-10-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-09-29: A solution to Problem 8.29 has been posted below.<br>
 2020-09-29: Just so you know -- When you work on your homework, there is no need to restate the statement of every homework problem.<br>
@@ -67,11 +68,12 @@ Problems from Chapter 9 Part 2: #33, 34, 35, 37, 38, 40.<br>
 Problems from Chapter 9 Part 3: #7, 9, 12, 41, 42, 43.<br>
 <br>
 
+<b>Homework  #4</b> 11 problems. Due Date: November 2nd.<br>
+Problems from Chapter 9 Part 4: #10, 21, 22, 44, 48.<br>
+Problems from the National Exam: <a href="f2020_dg2/nationalexam_ch9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+
 <!--
 
-<b>Homework  #4</b> 11 problems. Due Date: October 22nd.<br>
-Problems from Chapter 9 Part 4: #10, 21, 22, 44, 48.<br>
-Problems from the National Exam: <a href="f2019_dg2/nationalexam_ch9.pdf" title="Selected problems from the national exam">PDF</a>. Solutions available upon request.<br><br>
 
 <b>Homework  #5</b> 7 problems. Due Date: November 11th.<br>
 Problems from Chapter 9 Part 5: #26, 27, 45, 46, 47, 52, 55.<br><br>
