--- a/teaching/f2020_geom2.html
+++ b/teaching/f2020_geom2.html
@@ -42,6 +42,7 @@
 
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-10-18: Check out <FONT COLOR="red">Homework #5</FONT> below.<br>
 2020-10-03: Here is a very nice collection of math videos. <a href="http://www.dimensions-math.org/Dim_regarder_E.htm" title="Dimensions videos">Link</a> Please watch Chapter 1 and Chapter 9. You might want to watch other chapters as well as you learn more about geometry and topology.<br>
 2020-10-03: Check out <FONT COLOR="red">Homework #4</FONT> below.<br>
 2020-09-28: Please read an email announcement concerning issues with the attendance collecting system of the CBNU eCampus. If you want to claim your attendance which was not collected through the system, please fill out <a href="https://forms.gle/BnbVH89edGYaFD5b6" title="Open Google Forms">this google form</a>.<br>
@@ -75,42 +76,19 @@ Exercise 3.2. in p.71 #2<br>
 Exercise 3.3. in p.73 #3<br>
 Exercise 3.4. in p.75 #1, 2<br><br>
 
-
-<!--
-Problems are taken from end-of-section exercises.<br><br>
-<b>Homework  #1</b> 13 problems. Due Date: September 18th.<br>
-Exercise 1.1. in p.8 #2 <br>
-Exercise 1.2. in p.13 #3, 5, 6, 8, 13<br>
-Exercise 1.3. in p.15 #1, 2, 3, 7, 8<br>
-Exercise 1.4. in p.20 #1, 2<br><br>
-
-<b>Homework  #2</b> 10 problems. Due Date: September 25th.<br>
-Exercise 1.5. in p.22 #1, 3<br>
-Exercise 1.7. in p.30 #2, 5, 8<br>
-A Quiz on Chap. 1 in p.34 #2, 3, 4, 5, 7<br><br>
-
-<b>Homework  #3</b> 10 problems. Due Date: October 2nd.<br>
-Exercise 2.1. in p.45 #1, 2a, 2c, 3<br>
-Exercise 2.2. in p.48 #4, 5c, 5d, 6<br>
-Exercise 2.3. in p.51 #1, 3<br><br>
-
-<b>Homework  #4</b> 2 problems. Due Date: October 8th.<br>
-Exercise 2.4. in p.55 #1, 3<br><br>
-
-<b>Homework  #5</b> 7 problems. Due Date: October 15th.<br>
-Exercise 2.5. in p.61 #1, 2<br>
-Exercise 3.1. in p.68 #1, 2, 3, <a href="f2019_geom2/hw5.pdf" title="HW5 additional problems">additional problems</a><br><br>
-
-<b>Homework  #6</b> 9 problems. Due Date: October 22nd.<br>
-Exercise 3.2. in p.71 #2<br>
-Exercise 3.3. in p.73 #3<br>
-Exercise 3.4. in p.75 #1, 2. Also prove Corollaries 1 and 2 on the same page.<br>
-Exercise 3.5. in p.78 #1, 3, 4.<br><br>
-
-<b>Homework  #7</b> 6 problems. Due Date: October 28th.<br>
+<b>Homework  #5</b> 9 problems. Due Date: November 2nd.<br>
+Exercise 3.5. in p.78 #1, 3, 4.<br>
 Exercise 3.6. in p.85 #1, 2, 4<br>
 Exercise 3.8. in p.93 #1, 2<br>
 Exercise 3.9. in p.94 <br><br>
+<!--
+
+
+-->
+
+
+
+<!--
 
 <b>Homework  #8</b> 7 problems. Due Date: November 25th.<br>
 Exercise 4.1. in p.104 #1, 3, 6<br>
