--- a/teaching/f2020_dg2.html
+++ b/teaching/f2020_dg2.html
@@ -40,7 +40,7 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
-
+2020-11-09: <FONT COLOR="red">Homework #5, #6, #7</FONT> have been posted below.<br>
 2020-10-18: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2020-10-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-09-29: A solution to Problem 8.29 has been posted below.<br>
@@ -72,11 +72,21 @@ Problems from Chapter 9 Part 3: #7, 9, 12, 41, 42, 43.<br>
 Problems from Chapter 9 Part 4: #10, 21, 22, 44, 48.<br>
 Problems from the National Exam: <a href="f2020_dg2/nationalexam_ch9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
+<b>Homework  #5</b> 13 problems. Due Date: November 22nd.<br>
+Problems from Chapter 9 Part 5: #26, 27, 45, 46, 47, 52, 55.<br>
+Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br><br>
+
+<b>Homework  #6</b> 7 problems. Due Date: Before the final exam.<br>
+Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
+
+<b>Homework  #7</b> 7 problems. Due Date: Before the final exam.<br>
+Problems from the National Exam: <a href="f2020_dg2/nationalexam_ch11.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+
+
 <!--
 
 
-<b>Homework  #5</b> 7 problems. Due Date: November 11th.<br>
-Problems from Chapter 9 Part 5: #26, 27, 45, 46, 47, 52, 55.<br><br>
+
 
 <b>Homework  #6</b> 7 problems. Due Date: December 16th.<br>
 Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br>
