--- a/teaching/f2020_geom2.html
+++ b/teaching/f2020_geom2.html
@@ -42,6 +42,7 @@
 
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-11-09: Check out <FONT COLOR="red">Homework #6, #7, #8</FONT> from below.<br>
 2020-10-18: Check out <FONT COLOR="red">Homework #5</FONT> below.<br>
 2020-10-03: Here is a very nice collection of math videos. <a href="http://www.dimensions-math.org/Dim_regarder_E.htm" title="Dimensions videos">Link</a> Please watch Chapter 1 and Chapter 9. You might want to watch other chapters as well as you learn more about geometry and topology.<br>
 2020-10-03: Check out <FONT COLOR="red">Homework #4</FONT> below.<br>
@@ -81,8 +82,24 @@ Exercise 3.5. in p.78 #1, 3, 4.<br>
 Exercise 3.6. in p.85 #1, 2, 4<br>
 Exercise 3.8. in p.93 #1, 2<br>
 Exercise 3.9. in p.94 <br><br>
-<!--
 
+<b>Homework  #6</b> 7 problems. Due Date: November 20th.<br>
+Exercise 4.1. in p.104 #1, 3, 6<br>
+Exercise 4.2. in p.110 #2, 4, 5, 6<br><br>
+
+<b>Homework  #7</b> 5 problems. Due Date: November 29th.<br>
+Exercise 4.4. in p.117 #2, 4, 6<br>
+Exercise 4.5. in p.123 #3, 5<br><br>
+
+
+<b>Homework  #8</b> 5 problems. Due Date: Before the final exam.<br>
+Exercise 5.1. in p.135 #3<br>
+Exercise 5.2. in p.139 #1<br>
+Exercise 5.3. in p.140 #1<br>
+Exercise 5.4. in p.146 #1, 4<br><br>
+
+
+<!--
 
 -->
 
@@ -90,20 +107,11 @@ Exercise 3.9. in p.94 <br><br>
 
 <!--
 
-<b>Homework  #8</b> 7 problems. Due Date: November 25th.<br>
-Exercise 4.1. in p.104 #1, 3, 6<br>
-Exercise 4.2. in p.110 #2, 4, 5, 6<br><br>
-
-<b>Homework  #9</b> 5 problems. Due Date: November 30th.<br>
-Exercise 4.4. in p.117 #2, 4, 6<br>
-Exercise 4.5. in p.123 #3, 5<br><br>
-
-<b>Homework  #10</b> 5 problems. Due Date: December 16th.<br>
-Exercise 5.1. in p.135 #3<br>
-Exercise 5.2. in p.139 #1<br>
-Exercise 5.3. in p.140 #1<br>
-Exercise 5.4. in p.146 #1, 4<br><br>
  -->
+
+
+
+
 
 <h2><p>Exam Schedules</p></h2>
 TBA <br><br>
