--- a/teaching/f2020_geom2.html
+++ b/teaching/f2020_geom2.html
@@ -5,7 +5,7 @@
 <font face="Times New Roman">
 <body>
 <h1><p align="center">Geometry for teachers II</p></h1>
-<h3><p align="center">Course 7412075 Section 01, Fall 2019</p></h3>
+<h3><p align="center">Course 7412075 Section 01, Fall 2020</p></h3>
 <h3><p align="center">Tuesdays 13:00 - 13:50, Thursdays 15:00 - 16:50, Room: eCampus</p></h3>
 <h3><p align="center">Chungbuk National University</p></h3>
 <br>
@@ -42,6 +42,7 @@
 
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-11-25: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2020-11-09: Check out <FONT COLOR="red">Homework #6, #7, #8</FONT> from below.<br>
 2020-10-18: Check out <FONT COLOR="red">Homework #5</FONT> below.<br>
 2020-10-03: Here is a very nice collection of math videos. <a href="http://www.dimensions-math.org/Dim_regarder_E.htm" title="Dimensions videos">Link</a> Please watch Chapter 1 and Chapter 9. You might want to watch other chapters as well as you learn more about geometry and topology.<br>
@@ -112,10 +113,12 @@ Exercise 5.4. in p.146 #1, 4<br><br>
 
 
 
-
 <h2><p>Exam Schedules</p></h2>
-TBA <br><br>
+The final exam will be a take-home exam and will cover the entire material we covered. Please read <a href="f2020_geom2/finalcoversheet.pdf" title="Final Exam Policies">Final exam policies</a>. The take-home exam will be available on CBNU eCampus from December 10th (Thursday) 15:00 until December 11th (Friday) 14:59.<br>
 
+<FONT color="#FF00FF"><b>Take-Home Final Exam</b></FONT> <a href="f2020_geom2/finalcoversheet.pdf" title="Final Exam Cover Sheet">Cover Sheet</a>. It starts on December 10th (Thursday) 15:00 until December 11th (Friday) 14:59.<br>
+<!--The average was 72.5, standard deviation 6.46, and the maximum score achieved by a student 75.<br> -->
+<br>
 
 <!--
 
@@ -127,10 +130,7 @@ Midterm Exam: <FONT COLOR="#C40062">28 October (Monday),</FONT> In-class.<br>
 Here are <a href="f2019_geom2/midterm.pdf"  title="Open Midterm Exam">Problems</a> and <a href="f2019_geom2/midtermsol.pdf"  title="Open Midterm Exam Solution">Solutions</a>. The average was 46.93 and the maximum score achieved by a student was 95.<br>
 - If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br>
 <br>
-Final Exam: <FONT COLOR="#C40062">16 December (Monday),</FONT> In-class.<br>
-- Coverage: Chapters 1, 2, 3, 4, 5, and 6 (only those sections covered in class).<br>
-- Total 8 questions. The style and focus of the exam will be similar to the midterm exam. Chapters 1, 2, and 3 will be only indirectly covered in this exam to the extent that the exam assumes everything we studied together in this course. Exam problems will be mostly from those materials we studied after the midterm exam.<br>
-<br><br>
+
 -->
 
 
