--- a/teaching/f2020_dg2.html
+++ b/teaching/f2020_dg2.html
@@ -40,6 +40,7 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-11-25: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2020-11-09: <FONT COLOR="red">Homework #5, #6, #7</FONT> have been posted below.<br>
 2020-10-18: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2020-10-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
@@ -102,7 +103,9 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA <br><br>
+Final Exam: <FONT COLOR="#C40062">07 December (Monday),</FONT> at N-7 Room 308, 15:00--16:40.<br>
+- Coverage: Chapters 8, 9, 10, and 11. In Chapters 10 and 11, only those sections we covered in class will be included to the coverage.<br>
+- Total 6 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.) and some questions will be identical to old National Exam problems.<br><br>
 
 <!--
 Midterm Exam: <FONT COLOR="#C40062">22 October (Tuesday),</FONT> In-class.<br>
@@ -113,15 +116,11 @@ Here is the <a href="f2019_dg2/midterm.pdf"  title="Open Midterm Exam">Problems<
 - If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br>
 <br>
 
-
-Final Exam: <FONT COLOR="#C40062">16 December (Monday),</FONT> at E1-2 Room 306, 14:00--16:00.<br>
-- Coverage: Chapters 8, 9, 10, and 11. In Chapters 10 and 11, only those sections we covered in class will be included to the coverage.<br>
-- Total 8 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), and 4 questions which are identical or related to homework problems, and 3 question from the old national exam problems or mock test problems (See the attached PDF for Homeworks #4, #7.<br><br>
  -->
-
+<!--
 <h2><p>Make-up announcement</p></h2>
 TBA<br><br>
-<!--
+
 Due to the teaching observation practice of most of students, we do not meet during the period 28 October -- 08 November. Instead, we shall have six one-hour long make-up classes. Location is TBA.<br>
 
 Monday, 14 October 14:00--14:50<br>
