--- a/teaching/f2020_geom2.html
+++ b/teaching/f2020_geom2.html
@@ -116,7 +116,7 @@ Exercise 5.4. in p.146 #1, 4<br><br>
 <h2><p>Exam Schedules</p></h2>
 The final exam will be a take-home exam and will cover the entire material we covered. Please read <a href="f2020_geom2/finalcoversheet.pdf" title="Final Exam Policies">Final exam policies</a>. The take-home exam will be available on CBNU eCampus from December 10th (Thursday) 15:00 until December 11th (Friday) 14:59.<br>
 
-<FONT color="#FF00FF"><b>Take-Home Final Exam</b></FONT> <a href="f2020_geom2/finalcoversheet.pdf" title="Final Exam Cover Sheet">Cover Sheet</a>. It starts on December 10th (Thursday) 15:00 until December 11th (Friday) 14:59.<br>
+<FONT color="#FF00FF"><b>Take-Home Final Exam</b></FONT> <a href="f2020_geom2/finalcoversheet.pdf" title="Final Exam Cover Sheet">Cover Sheet</a>. It starts on December 10th (Thursday) 15:00 and examinees have to submit answers and signed cover sheet until December 11th (Friday) 14:59.<br>
 <!--The average was 72.5, standard deviation 6.46, and the maximum score achieved by a student 75.<br> -->
 <br>
 
