--- a/teaching/f2020_dg2.html
+++ b/teaching/f2020_dg2.html
@@ -40,6 +40,7 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-12-20: Letter grades have been submitted. Happy Holidays!<br>
 2020-11-25: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2020-11-09: <FONT COLOR="red">Homework #5, #6, #7</FONT> have been posted below.<br>
 2020-10-18: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
