--- a/teaching/f2020_geom2.html
+++ b/teaching/f2020_geom2.html
@@ -42,6 +42,7 @@
 
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-12-20: Letter grades have been submitted. Happy Holidays!<br> 
 2020-11-25: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2020-11-09: Check out <FONT COLOR="red">Homework #6, #7, #8</FONT> from below.<br>
 2020-10-18: Check out <FONT COLOR="red">Homework #5</FONT> below.<br>
