--- a/teaching/s2021_cv1.html
+++ b/teaching/s2021_cv1.html
@@ -15,7 +15,7 @@
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
 <b>Office Hours:</b> By appointment -- due to COVID-19.<br>
-<b>Syllabus:</b>  <a href="f2021_cv1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+<b>Syllabus:</b>  <a href="s2021_cv1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
 
 <h2><p>Announcements</p></h2>
