--- a/teaching/s2021_tig1.html
+++ b/teaching/s2021_tig1.html
@@ -6,10 +6,10 @@
 <body>
 <h1><p align="center">Topics in Geometry I</p></h1>
 <h3><p align="center">Course 9114001 Section 01, Spring 2021</p></h3>
-<h3><p align="center">Class meeting period 15.07.2021-04.08.2021</p></h3>
-<h3><p align="center">Mondays and Thursdays 09:00 - 11:50, Tuesdays and Fridays 12:00 - 14:50, Wednesdays 15:00 - 17:50, Room: E1-1 #140</p></h3>
-<h3><p align="center">Chungbuk National University</p></h3>
-<br>
+<h3><p align="center">09:00 - 11:50 for July 15, 16, 19, 20, 21</p></h3>
+<h3><p align="center">12:00 - 14:50 for July 22, 23, 26, 27, 28</p></h3>
+<h3><p align="center">15:00 - 17:50 for July 29, 30, August 02, 03, 04 at Room: E1-1 #140</p></h3>
+<h3><p align="center">Chungbuk National University</p></h3><br>
 
 
 <!-- FONT SIZE SPECIFICATION-->
@@ -29,20 +29,20 @@
 
 <h2><p>Weekly Quizzes</p></h2>
 For Problems and Solutions to Weekly Quizzes, go to <a href="https://cbnu.blackboard.com/"  title="Open CBNU eCampus">CBNU eCampus</a> (a.k.a. Blackboard)<br><br>
-<b>Quiz 1</b> on July 15th.<br>
-<b>Quiz 2</b> on July 16th.<br>
-<b>Quiz 3</b> on July 19th.<br>
-<b>Quiz 4</b> on July 20th.<br>
-<b>Quiz 5</b> on July 21st.<br>
-<b>Quiz 6</b> on July 22nd.<br>
-<b>Quiz 7</b> on July 23rd.<br>
-<b>Quiz 8</b> on July 26th.<br>
-<b>Quiz 9</b> on July 27th.<br>
-<b>Quiz 10</b> on July 28th.<br>
-<b>Quiz 11</b> on July 29th.<br>
-<b>Quiz 12</b> on July 30th.<br>
-<b>Quiz 13</b> on August 2nd.<br>
-<b>Quiz 14</b> on August 3rd.<br>
+<b>Quiz 1</b> on July 15th. Due by July 16th.<br>
+<b>Quiz 2</b> on July 16th. Due by July 17th.<br>
+<b>Quiz 3</b> on July 19th. Due by July 20th.<br>
+<b>Quiz 4</b> on July 20th. Due by July 21st.<br>
+<b>Quiz 5</b> on July 21st. Due by July 22nd.<br>
+<b>Quiz 6</b> on July 22nd. Due by July 23rd.<br>
+<b>Quiz 7</b> on July 23rd. Due by July 24th.<br>
+<b>Quiz 8</b> on July 26th. Due by July 27th.<br>
+<b>Quiz 9</b> on July 27th. Due by July 28th.<br>
+<b>Quiz 10</b> on July 28th. Due by July 29th.<br>
+<b>Quiz 11</b> on July 29th. Due by July 30th.<br>
+<b>Quiz 12</b> on July 30th. Due by July 31st.<br>
+<b>Quiz 13</b> on August 2nd. Due by August 3rd.<br>
+<b>Quiz 14</b> on August 3rd. Due by August 4th.<br>
 <br>
 
 
