--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -47,26 +47,23 @@
 2020-04-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2020-04-09: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-04-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
-2020-04-06: Youtube videos Sessions 1 to 3 are now available. Find links for video recordings from CBNU eCampus.<br>
-2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
-2020-04-01: Please find an announcement below on <FONT color="#000080">remote classes using Youtube videos</FONT>.<br>
-2020-03-31: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
-2020-03-24: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
-2020-03-06: Please see from below <FONT COLOR="#C40062">Updates and make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak.</FONT><br>
 -->
+2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2021-03-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
 Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
 
-TBA<br>
-
-<!-- <b>Homework  #1</b> 9 problems. Due Date: April 23rd.<br>
-Problems from Chapter 3 (Part 1): #1, 9, 15, 21, 25, 26, 31, 32, 34.<br><br>
-
+<b>Homework  #1</b> 11 problems. Due Date: March 21st.<br>
+Problems from Chapter 3: #1, 9, 15, 17, 18, 21, 25, 26, 31, 32, 34.<br><br>
+  
+  
+  
+  
+<!-- 
 <b>Homework  #2</b> 10 problems. Due Date: April 28th.<br>
-Problems from Chapter 3 (Part 2): #17, 18<br>
+
 Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
 
 <b>Homework  #3</b> 10 problems. Due Date: May 7th.<br>
