--- a/teaching/s2021_geom1.html
+++ b/teaching/s2021_geom1.html
@@ -63,18 +63,19 @@
 2020-03-07: Below in <FONT COLOR="#C40062">Assignment-based Classes</FONT>, necessary items will be posted by March 16th 15:00. Please come back to this page around that time for any update. Around the same time, your reading materials will be posted in <a href="https://cbnu.blackboard.com/"  title="Open CBNU eCampus">CBNU eCampus</a>.<br>
 2020-03-07: Please see from below <FONT COLOR="#C40062">Updates and plan for Assignment-based Class due to a new Corona Virus (COVID-19) outbreak.</FONT><br>
 -->
+2021-03-02: Please find the <FONT color="#800080">Assignment for Week 1</FONT> from below.<br>
 2021-03-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
-TBA.
-<!--
-<b>Homework  #1</b> 9 problems. Due Date: March 31st.<br>
-An exercise in the lecture note pages 8--9.<br>
+<b>Homework  #1</b> 9 problems. Due Date: March 14th.<br>
+An exercise on center of mass of a continuum given in the lecture.<br>
 Exercises in p.4 #1, 2, 3, 4<br>
 Exercises in p.7 #2, 3<br>
 Exercises in p.10 #3, 4<br><br>
 
+ 
+<!--
 <b>Homework  #2</b> 12 problems. Due Date: April 7th.<br>
 A question in the lecture note page 11.<br>
 Exercises in p.16 #1, 3<br>
