--- a/teaching/s2021_geom1.html
+++ b/teaching/s2021_geom1.html
@@ -74,14 +74,14 @@ Exercises in p.4 #1, 2, 3, 4<br>
 Exercises in p.7 #2, 3<br>
 Exercises in p.10 #3, 4<br><br>
 
- 
-<!--
-<b>Homework  #2</b> 12 problems. Due Date: April 7th.<br>
-A question in the lecture note page 11.<br>
+<b>Homework  #2</b> 11 problems. Due Date: March 21st.<br>
 Exercises in p.16 #1, 3<br>
 Exercises in p.20 #1, 2, 3<br>
 Exercises in p.22 #1, 2, 3<br>
 Exercises in p.24 #1, 2, 3<br><br>
+ 
+<!--
+
 
 <b>Homework  #3</b> 8 problems. Due Date: April 14th.<br>
 Exercises in p.27 #3, 4<br>
