--- a/teaching/s2021_geom1.html
+++ b/teaching/s2021_geom1.html
@@ -58,8 +58,8 @@
 2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
 -->
-2021-03-09: Please find the <FONT color="#800080">Assignment for Week 2</FONT> from below.<br>
-2021-03-02: Please find the <FONT color="#800080">Assignment for Week 1</FONT> from below.<br>
+2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.
+2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.
 2021-03-01: Welcome!<br>
 
 
