--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -45,6 +45,7 @@
 2020-04-13: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
 -->
+2021-03-12: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2021-03-01: Welcome!<br>
@@ -59,13 +60,11 @@ Problems from Chapter 3: #1, 9, 15, 17, 18, 21, 25, 26, 31, 32, 34.<br><br>
 <b>Homework  #2</b> 8 problems. Due Date: March 28th.<br>
 Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
   
-  
+<b>Homework  #3</b> 10 problems. Due Date: April 4th.<br>
+Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br>  
   
   
 <!-- 
-<b>Homework  #3</b> 10 problems. Due Date: May 7th.<br>
-Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br>
-
 <b>Homework  #4</b> 10 problems. Due Date: May 14th.<br>
 Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>
 Problems from Chapter 5 (Part 1): #5, 7, 8, 25, 28<br><br>
