--- a/teaching/s2021_geom1.html
+++ b/teaching/s2021_geom1.html
@@ -58,6 +58,8 @@
 2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
 -->
+2021-03-19: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
+2021-03-19: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2021-03-01: Welcome!<br>
@@ -76,23 +78,23 @@ Exercises in p.20 #1, 2, 3<br>
 Exercises in p.22 #1, 2, 3<br>
 Exercises in p.24 #1, 2, 3<br><br>
  
-<!--
-
-
-<b>Homework  #3</b> 8 problems. Due Date: April 14th.<br>
+<b>Homework  #3</b> 8 problems. Due Date: March 28th.<br>
 Exercises in p.27 #3, 4<br>
 Exercises in p.31 #2, 3<br>
 Exercises in p.33 #2, 3<br>
 Exercises in p.34 #1, 2<br><br>
-
-
-<b>Homework  #4</b> 11 problems. Due Date: April 21st.<br>
-An exercise in the lecture note page 35.<br>
+ 
+<b>Homework  #4</b> 10 problems. Due Date: April 4th.<br>
 Exercises in p.39 #2, 3<br>
 Exercises in p.42 #1, 2<br>
 Exercises in p.45 #2, 3<br>
 Exercises in p.47 #1, 2<br>
-Exercises in p.48 #1, 2<br><br>
+Exercises in p.48 #1, 2<br><br> 
+<!--
+
+
+
+
 
 <b>Homework  #5</b> 12 problems. Due Date: April 28th.<br>
 An exercise in the lecture note page 40.<br>
