--- a/teaching/s2021_geom1.html
+++ b/teaching/s2021_geom1.html
@@ -58,6 +58,9 @@
 2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
 -->
+2021-03-21: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
+2021-03-21: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
+2021-03-21: The previously provided Session 11 video was identical to Session 10, and the error has been corrected as of 21.03.2021 19:00. Obviously if you have watched and got your attendance approved in prior to this update, your attendance is invalid and you have to watch the correct video for your attendance.<br>
 2021-03-19: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-19: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
@@ -90,23 +93,15 @@ Exercises in p.42 #1, 2<br>
 Exercises in p.45 #2, 3<br>
 Exercises in p.47 #1, 2<br>
 Exercises in p.48 #1, 2<br><br> 
-<!--
 
-
-
-
-
-<b>Homework  #5</b> 12 problems. Due Date: April 28th.<br>
-An exercise in the lecture note page 40.<br>
-An exercise in the lecture note page 41.<br>
+<b>Homework  #5</b> 10 problems. Due Date: April 11th.<br>
 Exercises in p.50 #2, 3<br>
 Exercises in p.52 #1, 2<br>
 Exercises in p.53 #1, 2<br>
 Exercises in p.57 #1, 3<br>
-Exercises in p.59 #2, 3<br><br>
-
-
-<b>Homework  #6</b> 16 problems. Due Date: May 5th.<br>
+Exercises in p.59 #2, 3<br><br> 
+ 
+<b>Homework  #6</b> 16 problems. Due Date: April 18th.<br>
 Exercises in p.62 #1, 2<br>
 Exercises in p.63 #1, 2<br>
 Exercises in p.64 #1, 2, 3<br>
@@ -114,6 +109,16 @@ Exercises in p.66 #2, 3<br>
 Exercises in p.68 #1, 2<br>
 Exercises in p.69 #1, 2<br>
 Exercises in p.72--73 Questions 1, 2, 3.<br><br>
+
+ <!--
+
+
+
+
+
+
+
+
 
 <b>Homework  #7</b> 9 problems. Due Date: May 12th.<br>
 Exercises in p.81 #3<br>
