--- a/teaching/s2021_cv1.html
+++ b/teaching/s2021_cv1.html
@@ -32,6 +32,7 @@
 2020-09-07: Due to a technical glitch on my recording device, the second video for Session 4 does not have any voice. I shall fix this problem by tomorrow September 8th 15:00 and your attendance due for this week will be extended for 24 hours.  <br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 -->
+2021-03-22: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2021-03-01: Welcome!<br>
 
@@ -39,6 +40,10 @@
 <h2><p>Homework</p></h2>
 <b>Homework  #1</b> 10 problems. Due Date: March 28th.<br>
 Chapter 1, Exercises in p.18: #5, 8, 10, 13, 14, 16, 20, 21, 23, 25.<br>
+<br>
+ 
+<b>Homework  #2</b> 8 problems. Due Date: April 11th.<br>
+Chapter 2, Exercises in p.32: #2, 4, 9, 10, 12, 13, 14, 20.<br>
 <br>
 
 
