--- a/teaching/s2021_cv1.html
+++ b/teaching/s2021_cv1.html
@@ -32,6 +32,7 @@
 2020-09-07: Due to a technical glitch on my recording device, the second video for Session 4 does not have any voice. I shall fix this problem by tomorrow September 8th 15:00 and your attendance due for this week will be extended for 24 hours.  <br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 -->
+2021-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-22: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2021-03-01: Welcome!<br>
@@ -46,15 +47,14 @@ Chapter 1, Exercises in p.18: #5, 8, 10, 13, 14, 16, 20, 21, 23, 25.<br>
 Chapter 2, Exercises in p.32: #2, 4, 9, 10, 12, 13, 14, 20.<br>
 <br>
 
-
-<!-- <b>Homework  #1</b> 10 problems. Due Date: September 28th.<br>
-Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="f2020_dg2/hw1no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 28, 29 <a href="f2020_dg2/hw1no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32.<br><br>
-
-
-<b>Homework  #3</b> 12 problems. Due Date: October 16th.<br>
-Problems from Chapter 9 Part 2: #33, 34, 35, 37, 38, 40.<br>
-Problems from Chapter 9 Part 3: #7, 9, 12, 41, 42, 43.<br>
+<b>Homework  #3</b> 8 problems. Due Date: April 11th.<br>
+Chapter 3, Exercises in p.41: 2, 4, 5, 6, 7, 11, 15, 21.<br>
 <br>
+ 
+ 
+
+<!-- 
+
 
 <b>Homework  #4</b> 11 problems. Due Date: November 2nd.<br>
 Problems from Chapter 9 Part 4: #10, 21, 22, 44, 48.<br>
