--- a/teaching/s2021_cv1.html
+++ b/teaching/s2021_cv1.html
@@ -32,7 +32,8 @@
 2020-09-07: Due to a technical glitch on my recording device, the second video for Session 4 does not have any voice. I shall fix this problem by tomorrow September 8th 15:00 and your attendance due for this week will be extended for 24 hours.  <br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 -->
-2021-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
+2021-04-05: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
+2021-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2021-03-22: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2021-03-01: Welcome!<br>
@@ -50,7 +51,11 @@ Chapter 2, Exercises in p.32: #2, 4, 9, 10, 12, 13, 14, 20.<br>
 <b>Homework  #3</b> 8 problems. Due Date: April 11th.<br>
 Chapter 3, Exercises in p.41: 2, 4, 5, 6, 7, 11, 15, 21.<br>
 <br>
- 
+
+<b>Homework  #4</b> 8 problems. Due Date: April 18th.<br>
+Chapter 4, Exercises in p.56: 5, 6, 7, 8, 9, 10, 11, 12.<br>
+<br>
+
  
 
 <!-- 
