--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -45,6 +45,8 @@
 2020-04-13: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
 -->
+  
+2021-04-05: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-12: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
@@ -67,6 +69,11 @@ Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br
 <b>Homework  #4</b> 10 problems. Due Date: April 11th.<br>
 Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>
 Problems from Chapter 5 (Part 1): #5, 7, 8, 25, 28<br><br>
+
+<b>Homework  #5</b>  8 problems. Due Date: April 18th.<br>
+Problems from Chapter 5 (Part 2): #14, 15, 16, 35<br>
+Problems from the National Exam: <a href="s2021_dg1/hw5.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+  
   
 <!-- 
 <b>Homework  #5</b>  8 problems. Due Date: May 21st.<br>
