--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -45,7 +45,7 @@
 2020-04-13: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
 -->
-  
+2021-04-05: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
 2021-04-05: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-12: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
@@ -73,29 +73,26 @@ Problems from Chapter 5 (Part 1): #5, 7, 8, 25, 28<br><br>
 <b>Homework  #5</b>  8 problems. Due Date: April 18th.<br>
 Problems from Chapter 5 (Part 2): #14, 15, 16, 35<br>
 Problems from the National Exam: <a href="s2021_dg1/hw5.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-  
+
+<b>Homework  #6</b>  7 problems. Due Date: April 25st.<br>
+Problems from Chapter 5 (Part 3): #22, 23, 24, 33<br>
+Problems from the National Exam: <a href="s2021_dg1/hw6.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+
   
 <!-- 
-<b>Homework  #5</b>  8 problems. Due Date: May 21st.<br>
-Problems from Chapter 5 (Part 2): #14, 15, 16, 35<br>
-Problems from the National Exam: <a href="s2020_dg1/hw5.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-
-<b>Homework  #6</b>  7 problems. Due Date: May 21st.<br>
-Problems from Chapter 5 (Part 3): #22, 23, 24, 33<br>
-Problems from the National Exam: <a href="s2020_dg1/hw6.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
 <b>Homework  #7</b>  11 problems. Due Date: May 28th.<br>
 Problems from Chapter 7 (Part 1): #2, 3, 4, 8, 15<br>
-Problems from the National Exam: <a href="s2020_dg1/hw7.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+Problems from the National Exam: <a href="s2021_dg1/hw7.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
 <b>Homework  #8</b>  11 problems. Due Date: June 4th.<br>
 Problems from Chapter 7 (Part 2): #12, 14, 19, 21, 23, 28, 29<br>
-Problems from the National Exam: <a href="s2020_dg1/hw8.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+Problems from the National Exam: <a href="s2021_dg1/hw8.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
 <b>Homework  #9</b>  12 problems. Due Date: June 11th.<br>
 Problems from Serge Lang, Linear Algebra, 3rd Ed. p.131 Exercise #6<br>
 Problems from M. P. do Carmo, Differential forms and applications, p.10 Exercise #1, 2, 5, 7, 10<br>
-Problems from the National Exam: <a href="s2020_dg1/hw9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>-->
+Problems from the National Exam: <a href="s2021_dg1/hw9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>-->
 
 <!-- HW9 about this week's exercises <br> -->
 
