--- a/teaching/s2021_geom1.html
+++ b/teaching/s2021_geom1.html
@@ -58,6 +58,7 @@
 2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
 -->
+2021-04-11: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
 2021-04-11: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
 2021-03-21: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
 2021-03-21: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
@@ -118,25 +119,15 @@ Exercises in p.83 #1, 3<br>
 Exercises in p.85 #1, 2<br>
 Exercises in p.88 #1, 3<br><br> 
 
- <!--
-
-
-
-
-
-
-
-
-
-
-
-<b>Homework  #8</b> 14 problems. Due Date: May 19th.<br>
+<b>Homework  #8</b> 14 problems. Due Date: May 2nd.<br>
 Exercises in p.92 #1, 2, 3<br>
 Exercises in p.93 #1, 2, 3<br>
 Exercises in p.97 #2, 3, 4<br>
 Exercises in p.97 (bottom) #1, 2, 3<br>
-Exercises in p.100 #2, 3<br><br>
-
+Exercises in p.100 #2, 3<br><br> 
+ 
+ 
+ <!--
 <b>Homework  #9</b> 7 problems. Due Date: May 26th.<br>
 Exercises in p.102 #1<br>
 Exercises in p.103 #1, 2<br>
