--- a/teaching/s2021_cv1.html
+++ b/teaching/s2021_cv1.html
@@ -32,6 +32,7 @@
 2020-09-07: Due to a technical glitch on my recording device, the second video for Session 4 does not have any voice. I shall fix this problem by tomorrow September 8th 15:00 and your attendance due for this week will be extended for 24 hours.  <br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 -->
+2021-04-12: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2021-04-05: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2021-03-22: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
@@ -56,14 +57,12 @@ Chapter 3, Exercises in p.41: 2, 4, 5, 6, 7, 11, 15, 21.<br>
 Chapter 4, Exercises in p.56: 5, 6, 7, 8, 9, 10, 11, 12.<br>
 <br>
 
- 
+<b>Homework  #5</b> 10 problems. Due Date: May 2nd.<br>
+Chapter 5, Exercises in p.74: 4, 5, 6, 7, 8, 9, 10, 14, 15, 19.<br>
+<br> 
 
 <!-- 
 
-
-<b>Homework  #4</b> 11 problems. Due Date: November 2nd.<br>
-Problems from Chapter 9 Part 4: #10, 21, 22, 44, 48.<br>
-Problems from the National Exam: <a href="f2020_dg2/nationalexam_ch9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
 <b>Homework  #5</b> 13 problems. Due Date: November 22nd.<br>
 Problems from Chapter 9 Part 5: #26, 27, 45, 46, 47, 52, 55.<br>
