--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -45,6 +45,7 @@
 2020-04-13: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
 -->
+2021-04-19: <b>PBL project related</b> Find relevant details on your PBL project for this course below.<br>
 2021-04-05: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
 2021-04-05: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
@@ -122,6 +123,15 @@ Final Exam: TBA.
 - If you think you did not get a final grade you deserve, you are welcome to dispute. Please remember that the correction request has to be filed no later that 30 December 2019.<br><br>
 -->
 
+  
+<h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
+As announced in the syllabus, you must record a 20-minute long video lecture about one of the following:<br>
+(1) A sample lecture on any topic listed on the syllabus of this course.<br>
+(2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/5uYjZNvJsMrEoQPd8" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
+  
+Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br> 
+  
 <!--
 
 <h2><p>Make-up announcement</p></h2>
