--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -130,7 +130,7 @@ As announced in the syllabus, you must record a 20-minute long video lecture abo
 (2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
 You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/5uYjZNvJsMrEoQPd8" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
   
-Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br> 
+Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into "private" or even delete the video after your letter grade for this course is assigned.<br><br> 
   
 <!--
 
