--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -45,7 +45,7 @@
 2020-04-13: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
 -->
-2021-04-19: <b>PBL project related</b> Find relevant details on your PBL project for this course below.<br>
+2021-04-19: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>
 2021-04-05: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
 2021-04-05: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
