--- a/teaching/s2021_cv1.html
+++ b/teaching/s2021_cv1.html
@@ -32,6 +32,7 @@
 2020-09-07: Due to a technical glitch on my recording device, the second video for Session 4 does not have any voice. I shall fix this problem by tomorrow September 8th 15:00 and your attendance due for this week will be extended for 24 hours.  <br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 -->
+2021-04-19: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>
 2021-04-12: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2021-04-05: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
@@ -110,22 +111,14 @@ Here is the <a href="f2019_dg2/midterm.pdf"  title="Open Midterm Exam">Problems<
 <br>
 
  -->
-<!--
-<h2><p>Make-up announcement</p></h2>
-TBA<br><br>
 
-Due to the teaching observation practice of most of students, we do not meet during the period 28 October -- 08 November. Instead, we shall have six one-hour long make-up classes. Location is TBA.<br>
-
-Monday, 14 October 14:00--14:50<br>
-Monday, 21 October 14:00--14:50<br>
-Monday, 11 November 14:00--14:50<br>
-Monday, 18 November 14:00--14:50<br>
-Monday, 25 November 14:00--14:50<br>
-Monday, 02 December 14:00--14:50<br><br>
-
-Attendance on these Mondays will be checked at 15:00.<br>
--->
-
+<h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
+As announced in the syllabus, you must record a 20-minute long video lecture about one of the following:<br>
+(1) A sample lecture on any topic listed on the syllabus of this course.<br>
+(2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/5uYjZNvJsMrEoQPd8" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
+  
+Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br> 
 <!--
 
 
